--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 
 <body>
-    <form id="cal" onchange="take()">
+    <form id="cal" onchange="take()" method="post">
         <div id="calin">
             <label id="le" for="5tram">500.000</label>
             <input id="5tram" name="5tram" type="number" max="200">
@@ -95,7 +95,7 @@
 
 
         </div>
-        <iframe style="height:500px;width:400px;" src="https://www.calculator.net/"></iframe>
+        <iframe style="height:400px;width:400px;" src="https://www.calculator.net/"></iframe>
 
 
     </form>
