--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <div>
 
-                <button ><a src="https://kenlyer.github.io/money.github.io/?5tram=&2tram=&1tram=&5chuc=&20ngan=&10ngan=&5ngan=&2ngan=&1ngan=">reset</a></button>
+                <a style="cursor:pointer;" src="https://kenlyer.github.io/money.github.io/">reset</a>
                 <p id="values">Value!!!</p>
             </div>
 
