--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <div>
 
-                <a style="cursor:pointer;" src="https://kenlyer.github.io/money.github.io/">reset</a>
+                <a style="border:solid 1px red" src="https://kenlyer.github.io/money.github.io/">reset</a>
                 <p id="values">Value!!!</p>
             </div>
 
