--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Calculator</title>
     <style>
         body {
-            background-image: url("https://scontent.fsgn5-9.fna.fbcdn.net/v/t39.30808-6/343404239_1008347043930945_1417329986468681339_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=730e14&_nc_ohc=TJIRyHhBf54AX_zzVIf&_nc_ht=scontent.fsgn5-9.fna&oh=00_AfDSU9jrxWtbq3M2nCGvVcHfsWVthi6WnKl6_sTDqDDTSg&oe=64B96328");
+            background-image: url("https://scontent.fsgn2-8.fna.fbcdn.net/v/t39.30808-6/343404239_1008347043930945_1417329986468681339_n.jpg?stp=dst-jpg_p720x720&_nc_cat=102&ccb=1-7&_nc_sid=730e14&_nc_ohc=xwxUst7RNCoAX9eF_Jj&_nc_ht=scontent.fsgn2-8.fna&oh=00_AfCsIgy1odTFq9RRf9w_1X7sPAVowN3xvGw9X4iT1Dr2tg&oe=64C93528");
             background-size: 100% 120%;
             background-repeat: no-repeat;
             height: 500px;
