--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <div style="margin-left: 130px;">
                 <button type="button" id="reset_btn">reset</button>
-                <button type="button" id="test_btn">test API button</button>
+                <button type="button" id="test_btn">reset</button>
                 <p id="values" style="margin-left: 50px;">Value!!!</p>
             </div>
 
