--- a/calculate.html
+++ b/calculate.html
@@ -18,7 +18,7 @@
             alt="logo">
         <div>Arata-BoardGame</div>
     </nav>
-    <div class="datatable">
+    <div style="background-image: url("https://scontent.fsgn5-2.fna.fbcdn.net/v/t39.30808-6/360150356_257769050337568_6643207250613385970_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=730e14&_nc_ohc=3xM2jwroo-QAX-w1q25&_nc_ht=scontent.fsgn5-2.fna&oh=00_AfB6Bh-6Q6wJlzA--rrAvUrc5WTVya7Fbt3L_kCUaKItlw&oe=64CE4D4D");" class="datatable">
         <aside>
             <a href="calculate.html">Calculate</a>
             <a href="./data/data.html">Data</a>
