--- a/calculate.html
+++ b/calculate.html
@@ -16,7 +16,7 @@
     <nav>
         <img src="https://i.ytimg.com/vi/TQV00GtB5Rk/maxresdefault.jpg"
             alt="logo">
-        <div>Arata-BoardGame</div>
+        <div>Arata-BoardGame-v3.0</div>
     </nav>
     <div class="datatable">
         <aside>
