--- a/calculate.html
+++ b/calculate.html
@@ -4,24 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,height=device-height, initial-scale=1.0">
+    <meta name="description" content="đây là phiên bản v3.0">
+    <link rel="icon" href="https://i.ytimg.com/vi/TQV00GtB5Rk/maxresdefault.jpg">
     <link rel="stylesheet" href="calculate.css">
     <link rel="stylesheet" href="./nav/nav.css">
     <title>Calculator</title>
     <style>
-.datatable .thedata{
-    background-image: url("https://scontent.fsgn5-2.fna.fbcdn.net/v/t39.30808-6/360150356_257769050337568_6643207250613385970_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=730e14&_nc_ohc=3xM2jwroo-QAX-w1q25&_nc_ht=scontent.fsgn5-2.fna&oh=00_AfB6Bh-6Q6wJlzA--rrAvUrc5WTVya7Fbt3L_kCUaKItlw&oe=64CE4D4D");
-    background-size: 110% 150%;
-    background-repeat: no-repeat;
-    flex:6
-}
+
     </style>
 </head>
 
 <body>
     <nav>
-        <img src="https://i.ytimg.com/vi/TQV00GtB5Rk/maxresdefault.jpg"
-            alt="logo">
+        <img src="https://i.ytimg.com/vi/TQV00GtB5Rk/maxresdefault.jpg" alt="logo">
         <div>Arata-BoardGame-v3.0</div>
+        <div id="time">value</div>
     </nav>
     <div class="datatable">
         <aside>
@@ -73,6 +70,17 @@
 </body>
 
 <script src="calculate.js">
+</script>
+<script>
+
+    setInterval(() => {
+        var time = new Date();
+        var hour = time.getHours();
+        var minutes = time.getMinutes();
+        var sec = time.getSeconds();
+        document.getElementById("time").innerText = `${hour}:${minutes}:${sec}`
+    }, 1)
+
 </script>
 
 </html>
